--- a/TestSpring/src/main/resources/database.properties
+++ b/TestSpring/src/main/resources/database.properties
@@ -1,6 +1,6 @@
 #jdbc.driverClassName=org.hsqldb.jdbcDriver
 jdbc.driverClassName=com.mysql.jdbc.Driver
-# A verifer  : http://localhost/phpmyadmin/db_structure.php?db=stocks
+# A verifer  : http://localhost/phpmyadmin/?db=concerts
 jdbc.url=jdbc:mysql://localhost/concerts 
 jdbc.username=root
 jdbc.password=
