--- a/demoSpring/pom.xml
+++ b/demoSpring/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>fr.adaming</groupId>
-	<artifactId>Stock</artifactId>
+	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>TestSpring</name>
+	<name>demoSpring</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -30,21 +30,15 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		<!-- http://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-		<dependency>
-   			<groupId>mysql</groupId>
-    		<artifactId>mysql-connector-java</artifactId>
-    	</dependency>
-    	
-    	<!-- <dependency>
-    		<groupId>org.hibernate</groupId>
-    		<artifactId>hibernate-core</artifactId>
-    	</dependency> -->
 	</dependencies>
 	
 	<build>
